--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@
 pool:
   vmImage: 'macOS-10.14'
 variables:
-  scheme: ''
+  scheme: 'rnfirstapp'
   sdk: 'iphoneos'
   configuration: 'Release'
 
@@ -12,6 +12,7 @@ steps:
     sdk: '$(sdk)'
     scheme: '$(scheme)'
     configuration: '$(configuration)'
+    workingDirectory: '$(Build.Repository.LocalPath)/ios'
     xcodeVersion: 'default' # Options: default, 10, 9, 8, specifyPath
     exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
     packageApp: false
