Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,5 @@ steps:
     script: | 
     pod install 
     xcodebuild clean archive -workspace rnfirstapp.xcworkspace -scheme "rnfirstapp" -archivePath rnfirstapp.xcarchive
-    #workingDirectory: # Optional
-    #failOnStderr: false # Optional
+    workingDirectory: '$(Build.Repository.LocalPath)/ios'
+    
