Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,5 @@ steps:
 
 - task: CmdLine@2
   inputs:
-    script: | 
-    pod install 
     workingDirectory: '$(Build.Repository.LocalPath)/ios'
-    
+    script: pod install
