--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,15 +7,15 @@ variables:
   configuration: 'Release'
 
 steps:
-- task: Xcode@5
-  inputs:
-    sdk: '$(sdk)'
-    scheme: '$(scheme)'
-    configuration: '$(configuration)'
-    workingDirectory: '$(Build.Repository.LocalPath)/ios'
-    xcodeVersion: 'default' # Options: default, 10, 9, 8, specifyPath
-   # exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
-    packageApp: false
+# - task: Xcode@5
+#   inputs:
+#     sdk: '$(sdk)'
+#     scheme: '$(scheme)'
+#     configuration: '$(configuration)'
+#     workingDirectory: '$(Build.Repository.LocalPath)/ios'
+#     xcodeVersion: 'default' # Options: default, 10, 9, 8, specifyPath
+#    # exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
+#     packageApp: false
 
 - task: CmdLine@2
   inputs:
