--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
 #     configuration: '$(configuration)'
 #     workingDirectory: '$(Build.Repository.LocalPath)/ios'
 #     xcodeVersion: 'default' # Options: default, 10, 9, 8, specifyPath
-#    # exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
+#     exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
 #     packageApp: false
 
 - task: CmdLine@2
