--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,19 +11,20 @@ steps:
   inputs:
     sdk: '$(sdk)'
     scheme: '$(scheme)'
+    archivePath: 'rnfirstapp.xcarchive'
     xcWorkspacePath: '**/*.xcworkspace'
     configuration: '$(configuration)'
     workingDirectory: '$(Build.Repository.LocalPath)/ios'
-    xcodeVersion: 'default' # Options: default, 10, 9, 8, specifyPath
+    xcodeVersion: 12.3' # Options: default, 10, 9, 8, specifyPath
     exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
     packageApp: false
 
-- task: CmdLine@2
-  inputs:
-    workingDirectory: '$(Build.Repository.LocalPath)/ios'
-    script: pod install
+# - task: CmdLine@2
+#   inputs:
+#     workingDirectory: '$(Build.Repository.LocalPath)/ios'
+#     script: pod install
 
-- task: CmdLine@2
-  inputs:
-    workingDirectory: '$(Build.Repository.LocalPath)/ios'
-    script: xcodebuild clean archive -workspace rnfirstapp.xcworkspace -scheme "rnfirstapp" -archivePath rnfirstapp.xcarchive
+# - task: CmdLine@2
+#   inputs:
+#     workingDirectory: '$(Build.Repository.LocalPath)/ios'
+#     script: xcodebuild clean archive -workspace rnfirstapp.xcworkspace -scheme "rnfirstapp" -archivePath rnfirstapp.xcarchive
