--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ steps:
 # Install CocoaPods dependencies for Swift and Objective-C Cocoa projects
 - task: CocoaPods@0
   inputs:
-    #workingDirectory: # Optional
-    forceRepoUpdate: 
+    workingDirectory: '$(Build.Repository.LocalPath)/ios'
+    forceRepoUpdate: true
     #projectDirectory: # Optional
 - task: Xcode@5
   inputs:
