--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,9 @@ steps:
     configuration: '$(configuration)'
     workingDirectory: '$(Build.Repository.LocalPath)/ios'
     xcodeVersion: 'default' # Options: default, 10, 9, 8, specifyPath
+    teamId: 'Singtel Idea Factory Pte Ltd'
+    provisioningProfileUuid: 'XV3Y6Z4B9D'
+    provisioningProfileName: 'Lay mui Toh'
   #  exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
     packageApp: true
 
