--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
     teamId: 'Singtel Idea Factory Pte Ltd'
     provisioningProfileUuid: 'XV3Y6Z4B9D'
     provisioningProfileName: 'Lay mui Toh'
-  #  exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
+    exportPath: '$(agent.buildDirectory)/output/$(sdk)/$(configuration)'
     packageApp: true
 
 # - task: CmdLine@2
