Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,13 @@ variables:
   configuration: 'Release'
 
 steps:
+- task: NodeTool@0
+  inputs:
+    versionSpec: '14.x'
+    checkLatest: true
 - task: Npm@1
   inputs:
-    command: 'install'
+   command: 'install'
     verbose: true
 # CocoaPods
 # Install CocoaPods dependencies for Swift and Objective-C Cocoa projects
