--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,10 +11,10 @@ steps:
   inputs:
     versionSpec: '14.x'
     checkLatest: true
-- task: Npm@1
-  inputs:
-    command: 'install'
-    verbose: true
+# - task: Npm@1
+#   inputs:
+#     command: 'install'
+#     verbose: true
 # CocoaPods
 # Install CocoaPods dependencies for Swift and Objective-C Cocoa projects
 - task: CocoaPods@0
