Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,18 @@ steps:
     sudo chown root:root $(caCertificate.secureFilePath)
     sudo chmod a+r $(caCertificate.secureFilePath)
     sudo ln -s -t /etc/ssl/certs/ $(caCertificate.secureFilePath)
+# Install Apple certificate
+# Install an Apple certificate required to build on a macOS agent machine
+- task: InstallAppleCertificate@2
+  inputs:
+    certSecureFile: 
+    #certPwd: # Optional
+    #keychain: 'temp' # Options: default, temp, custom
+    #keychainPassword: # Required when keychain == Custom || Keychain == Default
+    #customKeychainPath: # Required when keychain == Custom
+    #deleteCert: # Optional
+    #deleteCustomKeychain: # Optional
+    #signingIdentity: # Optional
 - task: Xcode@5
   inputs:
     sdk: '$(sdk)'
